# TyphooN-Terminal

./: .dockerignore  .gitignore  API_KEYS.md  ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PHILOSOPHY.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  ROADMAP.md  build-windows.sh  docker-compose.yml  launch.sh  package-lock.json
cli/: Cargo.toml  typhoon.sh
cli/src/: broker.rs  creds.rs  main.rs  mcp.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/broker/: alpaca.rs  dxlink.rs  kraken_broker.rs  mod.rs  tastytrade.rs
engine/src/core/: ai_response_cache.rs  ai_sessions.rs  backtest.rs  bar_builder.rs  cache.rs  cryptocompare.rs  darwin.rs  darwin_ftp.rs  darwin_web.rs  data_source.rs  econ_calendar.rs  fred.rs  fundamentals.rs  keyring.rs  kraken.rs  kraken_futures.rs  lan_sync.rs  margin.rs  mod.rs  mql5_export.rs  news.rs  options.rs  position.rs  regulatory_alerts.rs  research.rs  risk.rs  screener.rs  sec_filing.rs  var.rs
engine/src/notifications/: mod.rs
engine/src/strategies/: martingale.rs  mod.rs
gpu-charts/: Cargo.toml
gpu-charts/src/: lib.rs
mql5-compiler/: Cargo.toml
mql5-compiler/src/: acsil.rs  afl.rs  ast.rs  calgo.rs  codegen.rs  easylang.rs  error.rs  ir.rs  lib.rs  mql4.rs  mql5.pest  ninjascript.rs  parser.rs  pine.rs  probuilder.rs  runtime.rs  thinkscript.rs  transpile.rs  wgsl_codegen.rs
native/: Cargo.toml
native/src/: app.rs  gpu_compute.rs  main.rs  metrics.rs
native/src/app/: ai.rs  ai_processes.rs  alpaca_sync.rs  app_background.rs  app_broker_processor.rs  app_runtime.rs  app_runtime_alpaca_account.rs  app_runtime_bottom.rs  app_runtime_broker_messages.rs  app_runtime_central_panel.rs  app_runtime_connections.rs  app_runtime_drawing_sync.rs  app_runtime_drawing_toolbar.rs  app_runtime_indicator_snapshots.rs  app_runtime_input.rs  app_runtime_kraken_market.rs  app_runtime_kraken_private.rs  app_runtime_kraken_ws.rs  app_runtime_live_quotes.rs  app_runtime_macro_alt_data.rs  app_runtime_market_data_fetch_results.rs  app_runtime_menu.rs  app_runtime_news_results.rs  app_runtime_order_results.rs  app_runtime_regulatory_windows.rs  app_runtime_research_core.rs  app_runtime_research_macro_valuation.rs  app_runtime_research_quant_snapshots.rs  app_runtime_research_rank_snapshots.rs  app_runtime_research_snapshots.rs  app_runtime_right_panel.rs  app_runtime_right_panel_mtf_grid.rs  app_runtime_right_panel_orders.rs  app_runtime_right_panel_positions.rs  app_runtime_right_panel_recent_fills.rs  app_runtime_right_panel_risk.rs  app_runtime_right_panel_trading.rs  app_runtime_right_panel_watchlist.rs  app_runtime_stream_ticks.rs  app_runtime_support.rs  (+44 more)
native/src/gpu_compute/: advanced_indicators.rs  bespoke_ohlc.rs  bind_groups.rs  core_indicator_methods.rs  dispatch.rs  legacy_sma_ema.rs  parity_indicators.rs  pipeline_bootstrap.rs  resources.rs  shaders.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/broker/: alpaca.rs  mod.rs  tastytrade.rs
src-tauri/src/core/: backtest.rs  bar_builder.rs  binance.rs  cache.rs  darwin.rs  lan_sync.rs  margin.rs  mod.rs  position.rs  sec_filing.rs  var.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/strategies/: martingale.rs  mod.rs
typhoon-broker-runtime/: Cargo.toml
typhoon-broker-runtime/src/: account_pool.rs  ai_chat.rs  alpaca_account_data.rs  alpaca_order_ops.rs  alpaca_ws_commands.rs  bar_fetch_commands.rs  broker_processor.rs  connection_commands.rs  external_feeds.rs  fundamentals_commands.rs  kraken_market_commands.rs  kraken_ohlc_pipeline.rs  kraken_order_ops.rs  kraken_ws_commands.rs  lib.rs  market_data_commands.rs  matrix_commands.rs  memory_pressure.rs  misc_commands.rs  news.rs  news_ingest.rs  prelude.rs  research_compute.rs  research_fetch.rs  resources.rs  storage.rs  symbol_search.rs  watchlist_quotes.rs
typhoon-broker-runtime/src/kraken_ohlc_pipeline/: tests.rs
typhoon-broker-runtime/src/research_compute/: analytics.rs  prelude.rs  risk.rs  technical_indicators.rs
typhoon-chart-ui/: Cargo.toml
typhoon-chart-ui/src/: auto_fibonacci.rs  cache_keys.rs  camera_controls.rs  drawing.rs  drawing_interaction.rs  indicators.rs  lib.rs  models.rs  render.rs  sma_outfits.rs  state.rs  types.rs
typhoon-chart-ui/src/render/: chart_helpers.rs  tests.rs  time_axis.rs
typhoon-engine/: Cargo.toml  tauri.conf.json
typhoon-engine/src/: lib.rs
typhoon-engine/src/broker/: alpaca.rs  bar_fetch.rs  cache_keys.rs  capabilities.rs  mod.rs  protocol.rs  sync_config.rs
typhoon-engine/src/core/: ai_response_cache.rs  ai_sessions.rs  backtest.rs  cache.rs  data_source.rs  fallback_bars.rs  fundamentals.rs  keyring.rs  kraken.rs  market_data_symbols.rs  market_session.rs  mod.rs  news.rs  options.rs  position.rs  regulatory_alerts.rs  risk.rs  screener.rs  sec_filing.rs  symbol_search.rs  var.rs  watchlist.rs
typhoon-engine/src/notifications/: mod.rs
typhoon-native/: Cargo.toml
typhoon-native/src/: app.rs  gpu_compute.rs  main.rs  metrics.rs
typhoon-native/src/app/: ai.rs  ai_processes.rs  alpaca_sync.rs  app_background.rs  app_broker_processor.rs  app_runtime.rs  app_runtime_alpaca_account.rs  app_runtime_bottom.rs  app_runtime_broker_messages.rs  app_runtime_central_panel.rs  app_runtime_connections.rs  app_runtime_drawing_sync.rs  app_runtime_drawing_toolbar.rs  app_runtime_errors.rs  app_runtime_indicator_extended_snapshots.rs  app_runtime_indicator_snapshots.rs  app_runtime_input.rs  app_runtime_kraken_market.rs  app_runtime_kraken_private.rs  app_runtime_kraken_ws.rs  app_runtime_menu.rs  (+61 more)
typhoon-research-ui/: Cargo.toml
typhoon-research-ui/src/: format.rs  lib.rs  render.rs  theme.rs  window_shell.rs
typhoon-transpiler/: Cargo.toml
typhoon-transpiler/src/: afl.rs  calgo.rs  codegen.rs  easylang.rs  error.rs  ir.rs  lib.rs  mql4.rs  mql5.pest  parser.rs  pine.rs  transpile.rs  wgsl_codegen.rs
wasm-indicators/: Cargo.toml
wasm-indicators/src/: lib.rs
web/: Cargo.toml  Trunk.toml  index.html
web-server/: Cargo.toml
web-server/src/: lib.rs
web/src/: app.rs  lib.rs
(+1431 files in other folders)
