[workspace]
resolver = "2"
members = [
    "typhoon-engine",
    "typhoon-broker-runtime",
    "typhoon-native",
    "typhoon-research-ui",
    "typhoon-chart-ui",
    "typhoon-transpiler",
]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.52", default-features = false }
reqwest = { version = "0.13", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }
egui = { version = "0.35", default-features = false }
futures-util = { version = "0.3", default-features = false }
rusqlite = { version = "0.40", default-features = false }
# Cache blobs are modern zstd frames only — the legacy (v0.5–0.7 format)
# and dictionary-builder default features stay off.
zstd = { version = "0.13", default-features = false, features = ["arrays"] }
zeroize = { version = "1.9", default-features = false, features = ["alloc"] }
# Nonces come from rand::random, not the AEAD's rng — getrandom default off.
aes-gcm = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
keyring-core = { version = "1", default-features = false }
sha2 = { version = "0.11", default-features = false }
hmac = "0.13"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
typhoon-transpiler = { path = "typhoon-transpiler" }
typhoon-engine = { path = "typhoon-engine" }
typhoon-broker-runtime = { path = "typhoon-broker-runtime" }
typhoon-research-ui = { path = "typhoon-research-ui" }
typhoon-chart-ui = { path = "typhoon-chart-ui" }

[profile.release]
opt-level = 3
lto = "thin"         # parallel incremental-friendly LTO for normal launch/build
codegen-units = 44   # match this workstation's logical cores (nproc=44)
incremental = true   # much faster edit/run cycles for the native trading terminal
strip = true
panic = "abort"
debug = false

# Use when you explicitly want the slowest/smallest full-program optimized artifact.
[profile.release-max]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
