[workspace]
resolver = "2"
members = [
    "typhoon-engine",
    "typhoon-broker-runtime",
    "typhoon-native",
    "typhoon-research-ui",
    "typhoon-chart-ui",
    "typhoon-transpiler",
]
# vendor/* crates are consumed via [patch.crates-io], not as workspace members.
exclude = ["vendor/eframe"]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.53", default-features = false }
reqwest = { version = "0.13", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false, features = ["std"] }
egui = { version = "0.35", default-features = false }
futures-util = { version = "0.3", default-features = false }
rusqlite = { version = "0.40", default-features = false }
# Cache blobs are modern zstd frames only — the legacy (v0.5–0.7 format)
# and dictionary-builder default features stay off.
zstd = { version = "0.13", default-features = false, features = ["arrays"] }
zeroize = { version = "1.9", default-features = false, features = ["alloc"] }
# Nonces come from rand::random, not the AEAD's rng — getrandom default off.
aes-gcm = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
keyring-core = { version = "1", default-features = false }
sha2 = { version = "0.11", default-features = false }
hmac = "0.13"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
# Additional direct dependencies centralized here for single-version policy,
# minimal feature surface, and easy security refreshes (per ADR-031/088).
# Versions are latest stable at time of this pass; features kept to exactly
# what each consuming crate enables (see per-crate manifests for call-site
# additions and rationale comments).
async-trait = "0.1"
bytemuck = "1.25"
crc32fast = { version = "1.5", default-features = false, features = ["std"] }
eframe = { version = "0.35", default-features = false }
egui_commonmark = { version = "0.24", default-features = false }
egui_extras = { version = "0.35", default-features = false }
egui_plot = "0.36"
image = { version = "0.25", default-features = false }
mimalloc = { version = "0.1", default-features = false }
pest = { version = "2.8", default-features = false, features = ["std", "memchr"] }
pest_derive = { version = "2.8", default-features = false, features = ["std"] }
prometheus = { version = "0.14", default-features = false }
regex = { version = "1.13", default-features = false }
rfd = { version = "0.17", default-features = false }
rmp-serde = "1.3"
rustls = { version = "0.23", default-features = false }
scraper = { version = "0.27", default-features = false }
tokio-tungstenite = { version = "0.30", default-features = false }
wasm-encoder = { version = "0.253", default-features = false }
wgpu = { version = "29", default-features = false }
windows-sys = { version = "0.61", default-features = false }
typhoon-transpiler = { path = "typhoon-transpiler" }
typhoon-engine = { path = "typhoon-engine" }
typhoon-broker-runtime = { path = "typhoon-broker-runtime" }
typhoon-research-ui = { path = "typhoon-research-ui" }
typhoon-chart-ui = { path = "typhoon-chart-ui" }

[profile.release]
opt-level = 3
lto = "thin"         # parallel incremental-friendly LTO for normal launch/build
codegen-units = 44   # match this workstation's logical cores (nproc=44)
incremental = true   # much faster edit/run cycles for the native trading terminal
strip = true
panic = "abort"
debug = false

# Use when you explicitly want the slowest/smallest full-program optimized artifact.
[profile.release-max]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

# Vendored eframe 0.35.0 with one local fix: a redraw-starvation watchdog so
# `App::logic` keeps ticking when the compositor withholds redraws (Wayland
# window on an inactive workspace). Without it the whole frame body — and any
# data pump inside it — freezes until the window is focused again. See
# vendor/eframe/README.md (upstream: MIT OR Apache-2.0, © emilk/egui authors).
[patch.crates-io]
eframe = { path = "vendor/eframe" }
