[package]
name = "typhoon-cli"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal CLI — TUI interface for trading, research, and risk management"
license = "LicenseRef-BSL-1.1"

[[bin]]
name = "typhoon-cli"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Shared with main terminal
typhoon-engine = { path = "../engine" }
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI-specific
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"

# Credential decryption (shares format with GUI terminal)
aes-gcm = "0.10"
sha2 = "0.11"
hmac = "0.13"
pbkdf2 = "0.13"
# rand = "0.10"  # Not used in CLI (used in engine for nonce generation)
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
