[package]
name = "typhoon-cli"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal CLI — lean TUI/headless interface for trading, cache access, and ops"
license = "BUSL-1.1"

[[bin]]
name = "typhoon-cli"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.30.1"
crossterm = "0.29"

# Shared with main terminal
typhoon-engine = { workspace = true }
reqwest = { workspace = true, features = ["json", "query", "rustls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
zstd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# CLI-specific
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"

# Credential decryption (shares format with GUI terminal)
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
# rand = "0.10"  # Not used in CLI (used in engine for nonce generation)
base64 = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
