[package]
name = "typhoon-engine"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal Engine — broker, cache, risk, analytics (pure Rust, no UI framework)"
license = "LicenseRef-BSL-1.1"

[lib]
name = "typhoon_engine"
path = "src/lib.rs"

# Library crate only — native app binary lives in ../native/

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
reqwest = { version = "0.13", features = ["json", "query", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
zeroize = { version = "1", features = ["derive"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
rcgen = "0.14"            # Self-signed TLS cert generation for LAN sync (updated 2026-03-31)
native-tls = "0.2"       # TLS connector/acceptor for wss://
tokio-native-tls = "0.3" # Async TLS wrapper for tokio
futures-util = "0.3"
async-trait = "0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
# System keyring for credential storage
keyring = "3"  # Cross-platform keyring (libsecret/Keychain/CredentialManager)
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9"
base64 = "0.22"
calamine = "0.34"
zip = { version = "7", default-features = false, features = ["deflate-flate2"] }
flate2 = "1"  # Gzip decompression for DARWIN FTP quote files
mql5-compiler = { path = "../mql5-compiler" }

[dev-dependencies]
tempfile = "3"
