[package]
name = "typhoon-engine"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal Engine — broker, cache, risk, analytics (pure Rust, no UI framework)"
license = "LicenseRef-BSL-1.1"

[lib]
name = "typhoon_engine"
path = "src/lib.rs"

# Library crate only — native app binary lives in ../native/

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
reqwest = { workspace = true, features = ["json", "query", "cookies", "rustls"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zstd = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
aes-gcm = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
rcgen = "0.14"            # Self-signed TLS cert generation for LAN sync (updated 2026-03-31)
native-tls = "0.2"       # TLS connector/acceptor for wss://
tokio-native-tls = "0.3" # Async TLS wrapper for tokio
futures-util = "0.3"
async-trait = "0.1"
rusqlite = { workspace = true, features = ["bundled"] }
# System keyring for credential storage
keyring = "3"  # Cross-platform keyring (libsecret/Keychain/CredentialManager)
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = "0.10"
base64 = { workspace = true }
calamine = "0.35"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
flate2 = "1"  # Gzip decompression for DARWIN FTP quote files
thirtyfour = { workspace = true, default-features = false, features = ["reqwest", "rustls-tls"] }    # Async WebDriver client (Selenium) for Darwinex Zero scraping
mql5-compiler = { workspace = true }

[dev-dependencies]
tempfile = "3"
