[package]
name = "typhoon-engine"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal Engine — broker, cache, risk, analytics (pure Rust, no UI framework)"
license = "BUSL-1.1"

[lib]
name = "typhoon_engine"
path = "src/lib.rs"

# Library crate only — native app binary lives in ../native/

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
reqwest = { workspace = true, features = ["json", "query", "cookies", "rustls"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zstd = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
aes-gcm = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
rcgen = "0.14"            # Self-signed TLS cert generation for LAN sync (updated 2026-03-31)
native-tls = "0.2"       # TLS connector/acceptor for wss://
tokio-native-tls = "0.3" # Async TLS wrapper for tokio
futures-util = "0.3"
crc32fast = "1.5.0"
async-trait = "0.1"
rusqlite = { workspace = true, features = ["bundled"] }
# System keyring for credential storage (keyring 4.x split crates)
keyring-core = { version = "1", features = ["sample"] } # Entry/Error API + sample test store
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = "0.10"
base64 = { workspace = true }
calamine = "0.35"
# DOM-aware article body extractor: picks the publisher's main content node
# (article/main/.caas-body/.article-body/etc.) and drops nav/header/footer/aside
# chrome before returning text. See news::extract_article_text.
scraper = { version = "0.27", default-features = false }
mql5-compiler = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[dev-dependencies]
tempfile = "3"
