[package]
name = "typhoon-gpu-charts"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated candlestick chart renderer via wgpu/WebGL2"
license = "LicenseRef-BSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlCanvasElement",
  "WebGl2RenderingContext", "WebGlProgram", "WebGlShader",
  "WebGlBuffer", "WebGlUniformLocation",
  "console",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
