[package]
name = "mql5-compiler"
version = "0.1.0"
edition = "2024"
description = "MQL5 and PineScript to WASM compiler for TyphooN Terminal"
license = "LicenseRef-BSL-1.1"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
wasm-encoder = "0.245"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
