[package]
name = "mql5-compiler"
version = "0.1.0"
edition = "2024"
description = "MQL5 and PineScript to WASM compiler for TyphooN Terminal"
license = "LicenseRef-BSL-1.1"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
wasm-encoder = "0.249"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
