[package]
name = "typhoon-native"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal — Native GPU renderer (egui + wgpu)"

[[bin]]
name = "typhoon"
path = "src/main.rs"

[dependencies]
# Engine (shared core library)
typhoon-engine = { path = "../engine" }

# Web client server (HTTPS + WebSocket relay for phone access)
typhoon-web-server = { path = "../web-server" }
typhoon-web-protocol = { path = "../web-protocol" }

# MQL5/PineScript compiler (indicator compilation + execution)
mql5-compiler = { path = "../mql5-compiler" }

# Native GPU UI — latest stable egui ecosystem (2026-03-27)
eframe = { version = "0.34", default-features = true, features = ["wgpu"] }
egui = "0.34"
egui_plot = "0.35"
wgpu = "29"  # Aligned with eframe 0.34

# Async runtime (shared with engine)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# HTTP client (for Kraken API in broker task — matches engine)
reqwest = { version = "0.13", features = ["json"] }

# Date/time formatting (for chart time axis labels)
chrono = { version = "0.4", features = ["serde"] }

# Native file dialog
rfd = "0.17"

# Serialization for session persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Safe byte casting for GPU buffer I/O (replaces unsafe custom Pod trait)
bytemuck = { version = "1", features = ["derive"] }

# Prometheus metrics
prometheus = "0.14"
axum = "0.8"

# Image encoding (lossless WebP screenshot export only; avoid AVIF/rav1e deps)
image = { version = "0.25", default-features = false, features = ["webp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Custom allocator — mimalloc is 5-15% faster than system malloc on small alloc heavy workloads
mimalloc = { version = "0.1", default-features = false }

# Selenium WebDriver for Darwinex Zero scraping (ADR-093)
thirtyfour = "0.36"

# Windows AC-power probe for ADR-205 idle auto-compact gate
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Power"] }
