[package]
name = "typhoon-native"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal — Native GPU renderer (egui + wgpu)"

[[bin]]
name = "typhoon"
path = "src/main.rs"

[dependencies]
# Engine (shared core library)
typhoon-engine = { workspace = true }

# MQL5/PineScript compiler (indicator compilation + execution)
mql5-compiler = { workspace = true }

# Native GPU UI — latest stable egui ecosystem (2026-03-27)
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wayland", "wgpu_no_default_features", "x11"] }
egui = { version = "0.34.3", default-features = false, features = ["default_fonts"] }
egui_plot = "0.35"
# News article rendering: markdown viewer (paragraphs/links/headings/inline images)
# plus the egui_extras image loader so hero images and inline <img>s decode from URL.
# Deliberately NOT a full HTML/JS renderer (no webview, no wry/tao) — see ADR for the
# threat model on remote-content engines inside a financial terminal.
egui_extras = { version = "0.34.3", default-features = false, features = ["image", "all_loaders"] }
egui_commonmark = { version = "0.23", default-features = false, features = ["load-images"] }
wgpu = { version = "29", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"] }  # Aligned with eframe 0.34; Linux-native only, no web/DX/Metal backends

# Async runtime (shared with engine)
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }

# Concurrent future combinators (join_all for the news-body hydrator)
futures-util = "0.3"

# Regex filter for the News window — lets the user search article headlines
# with /pattern/ syntax in addition to the keyword and comma-separated
# multi-symbol modes. Already transitively in the build via tracing-subscriber.
regex = "1"

# HTTP client (for Kraken API in broker task — matches engine)
reqwest = { workspace = true, features = ["json", "rustls"] }
# Select one process-wide rustls crypto provider explicitly. reqwest pulls
# aws-lc-rs while egui_extras/ehttp/ureq pulls ring, so rustls cannot infer a
# unique provider at runtime unless the binary installs one before TLS use.
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }

# Date/time formatting (for chart time axis labels)
chrono = { workspace = true }

# Native file dialog
rfd = "0.17"

# Serialization for session persistence
serde = { workspace = true }
serde_json = { workspace = true }

# Safe byte casting for GPU buffer I/O (replaces unsafe custom Pod trait)
bytemuck = { version = "1", features = ["derive"] }

# Prometheus metrics
prometheus = "0.14"
axum = "0.8"

# Image encoding (lossless WebP screenshot export + news article hero images
# loaded via egui_extras → needs png/jpeg decode too).
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Custom allocator — mimalloc is 5-15% faster than system malloc on small alloc heavy workloads
mimalloc = { version = "0.1", default-features = false }

# Windows AC-power probe for ADR-205 idle auto-compact gate
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Power"] }
