[package]
name = "typhoon-terminal"
version = "0.1.0"
edition = "2024"
description = "Swiss army knife of risk management — charting terminal with VaR, Standard, Fixed, and Dynamic lot sizing, hedged martingale (TRIM/PROTECT), and one-click order placement via draggable SL/TP lines"
license = "LicenseRef-BSL-1.1"

[dependencies]
tauri = { version = "2", features = [] }
# tauri-plugin-shell removed — not used, reduces attack surface
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
zeroize = { version = "1", features = ["derive"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"
# keyring removed — gnome-keyring session collection doesn't persist on all Linux setups.
# Replaced with AES-256-GCM encrypted SQLite storage (aes-gcm + sha2 + rand).
rusqlite = { version = "0.39", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.10"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
