[package]
name = "typhoon-broker-runtime"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal broker command runtime seam"
license = "BUSL-1.1"

[lib]
name = "typhoon_broker_runtime"
path = "src/lib.rs"

[dependencies]
typhoon-engine = { workspace = true }
typhoon-chart-ui = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
tokio = { workspace = true, features = ["fs", "sync", "time"] }
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
# join_all for concurrent fetch fan-outs — the future combinators live in
# the alloc feature; no stream/sink/macros needed here.
futures-util = { workspace = true, features = ["alloc"] }
