[package]
name = "typhoon-chart-ui"
version = "0.1.0"
edition = "2024"
description = "Chart-UI view + chart-local state layer for TyphooN Terminal (ADR-125 Target 2)"

[dependencies]
typhoon-engine = { workspace = true }
chrono = { workspace = true }
# Same egui as typhoon-native (0.35) so egui types unify across the workspace.
egui = { version = "0.35", default-features = false }
