[package]
name = "typhoon-engine"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal Engine — broker, cache, risk, analytics (pure Rust, no UI framework)"
license = "BUSL-1.1"

[lib]
name = "typhoon_engine"
path = "src/lib.rs"

# Library crate only — native app binary lives in ../typhoon-native/

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
# cookies is load-bearing: the Yahoo crumb/consent flow needs a cookie jar.
reqwest = { workspace = true, features = ["json", "query", "cookies", "rustls"] }
chrono = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
# Zeroizing<String> + the Zeroize trait only — no derives, so the
# zeroize_derive proc-macro stays out of this crate's build graph.
zeroize = { workspace = true }
aes-gcm = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# Declared minimal: StreamExt (std) + SinkExt (sink) for the WS lanes.
# `sink` was previously only enabled transitively by tokio-tungstenite's own
# futures-util dep — declare what we call so a tungstenite feature change
# can't silently break the build.
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# Alpaca's streaming APIs frame payloads as MessagePack; decode binary frames
# into serde_json::Value so the existing JSON parsers can consume them.
rmp-serde = "1"
crc32fast = "1.5.0"
async-trait = "0.1"
rusqlite = { workspace = true, features = ["bundled"] }
# System keyring for credential storage (keyring 4.x split crates).
# The sample test store rides in dev-dependencies only — the shipped
# binary carries just the Entry/Error API + the Secret Service backend.
keyring-core = "1"
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = "0.10"
base64 = { workspace = true }
# DOM-aware article body extractor: picks the publisher's main content node
# (article/main/.caas-body/.article-body/etc.) and drops nav/header/footer/aside
# chrome before returning text. See news::extract_article_text.
scraper = { version = "0.27", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3.2.0"
keyring-core = { version = "1", features = ["sample"] } # sample store for keyring tests
