[package]
name = "typhoon-engine"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal Engine — broker, cache, risk, analytics (pure Rust, no UI framework)"
license = "BUSL-1.1"

[lib]
name = "typhoon_engine"
path = "src/lib.rs"

# Library crate only — native app binary lives in ../typhoon-native/

[dependencies]
serde = { workspace = true }
# Raw WS payloads and byte-stable cache round-trips require these engine-only
# features; other workspace crates keep serde_json's plain std surface.
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "net", "io-util"] }
# cookies is load-bearing: the Yahoo crumb/consent flow needs a cookie jar.
reqwest = { workspace = true, features = ["json", "query", "cookies", "rustls"] }
chrono = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
# Zeroizing<String> + the Zeroize trait only — no derives, so the
# zeroize_derive proc-macro stays out of this crate's build graph.
zeroize = { workspace = true }
aes-gcm = { workspace = true }
# Reuse the platform trust store already selected by reqwest/rustls. This avoids
# compiling the legacy webpki-roots 0.26 compatibility wrapper beside v1.
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-native-roots"] }
# Declared minimal: StreamExt (std) + SinkExt (sink) for the WS lanes.
# `sink` was previously only enabled transitively by tokio-tungstenite's own
# futures-util dep — declare what we call so a tungstenite feature change
# can't silently break the build.
futures-util = { workspace = true, features = ["std", "sink"] }
# Alpaca's streaming APIs frame payloads as MessagePack; decode binary frames
# into serde_json::Value so the existing JSON parsers can consume them.
rmp-serde = { workspace = true }
crc32fast = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "cache"] }
# System keyring for credential storage (keyring 4.x split crates).
# The sample test store rides in dev-dependencies only — the shipped
# binary carries just the Entry/Error API + the Secret Service backend.
keyring-core = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
# DOM-aware article body extractor: picks the publisher's main content node
# (article/main/.caas-body/.article-body/etc.) and drops nav/header/footer/aside
# chrome before returning text. See news::extract_article_text.
scraper = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }
